--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "rust-desktop-app-template"
+name = "pl-sql-ide"
 version = "0.0.1"
-description = "A Graphical Desktop App"
-authors = ["you"]
+description = "PL-SQL-IDE"
+authors = ["Frank"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -14,6 +14,7 @@ tauri-build = { version = "1", features = [] }
 tauri = { version = "1", features = ["shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+config = "0.13"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
