--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rust-desktop-app-template",
+  "name": "PL-SQL-IDE",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "tauri": "tauri"
