--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "pl-sql-ide"
-version = "0.0.1"
+version = "0.0.2"
 description = "PL-SQL-IDE"
-authors = ["Frank"]
+authors = ["Frank van Geest"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
